# hra-hackathon

./: .gitignore  README.md  pyproject.toml
experiments/: biomodels_fetch.py  model_ids.py  plotting.py  run_hra_models.py  sbml_utils.py  species_names.py
models/: MODEL1209260000.xml  MODEL2401110001.xml
out_hra_models/: results.html
processes/: __init__.py  copasi_process.py
